# 2025-P3-AI-Personas

./: .editorconfig  .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: tests.yml
adsp/: __init__.py
adsp/app/: __init__.py  api_server.py  auth_service.py  ingestion_service.py  persona_config.py  qa_service.py  report_service.py
adsp/communication/: __init__.py  cache.py  event_broker.py  rpc.py
adsp/core/: __init__.py  context_filter.py  runtime.py  types.py
adsp/data_pipeline/: __init__.py  embedding_utils.py  ingestion.py  schema.py
adsp/fe/: README.md  __init__.py  api_client.py  app.py  chat_frontend.py  (+1 more)
docs/: API_GUIDE.md  ARCHITECTURE.md  DEPLOYMENT.md  QUICKSTART.md  TESTING.md  TROUBLESHOOTING.md  mkdocs.yml
examples/: api_usage.py  basic_chat.py
notebooks/: 00_getting_started_colab.ipynb  00_getting_started_local.ipynb  2.01.zt-persona_experiment.ipynb
scripts/: check_health.py  index_fact_data.py  run_api.py  run_chat.py  run_fact_data_extraction.py  run_frontend.py  run_json_to_markdown.py  run_persona_extraction.py  run_tests.sh
tests/: test_api_client.py  test_api_openapi.py  test_auth_service.py  test_chat_session.py  test_context_helpers.py  test_core_types.py  test_data.py  test_fact_data_utils.py  test_monitoring.py  test_orchestrator_filtering.py  test_prompt_builder.py  test_prompting.py  test_rag_helpers.py  test_runtime_registry.py  test_schema_parse.py  test_services.py  test_types.py  test_vector_db.py
(+138 files in other folders)
