[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "adsp"
version = "0.0.2"
description = "Applied Data Science Project"
authors = [
  { name = "team 1" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = ">=3.10.0"


[tool.ruff]
line-length = 99
src = ["adsp"]
include = ["pyproject.toml", "adsp/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["adsp"]
force-sort-within-sections = true

